# cowallet

./: .dockerignore  .env.example  .env.prod.template  .git-blame-ignore-revs  .gitignore  .gitleaks.toml  AGENTS.md  AI_DEVELOPMENT_SUMMARY.md  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  Makefile.local  PROJECT_STATUS.md  deny.toml  deploy.sh  docker-compose.prod.yml  docker-compose.yml  install-deps.sh  skills-lock.json
.claude/commands/: create-commit.md  create-issue.md  create-pr.md  fix-pr.md  start-issue.md  verify-deploy.md
.claude/skills/: bridgers-api  omnibridge-swap
.codegraph/: daemon.pid
.githooks/: pre-commit
.github/: CODEOWNERS  WORKFLOWS.md  pull_request_template.md
.github/workflows/: cargo-deny.yml  ci.yml  deploy-ecs.yml  flutter-ci.yml  pr-hygiene.yml  rust-audit.yml  security.yml
.omc/: notepad.md  prd.json  progress.txt  project-memory.json
.omc/sessions/: 08682b44-b4f7-4d63-bdc3-42cb8b51a349.json  11ca40ea-59ee-4583-bbd3-790ffdf47b1b.json  16624208-4a00-4d30-828f-7915e5301404.json  1c77d0ab-7081-4a68-831c-7a90f4673fce.json  2091f241-d2ef-4f71-9143-3e7555ae47fd.json  210de2e3-9b24-4422-b4aa-cbdad9771175.json  245f080e-f64c-4e55-9885-d1c0ef80ae0a.json  25fb2fc1-f0de-4d63-9852-a56e4c7f92a7.json  2a41a695-d15e-49f9-a440-dabf0462b422.json  2b77058f-526b-48c6-8e91-2344c08a84fe.json  3017baca-eaed-43c7-9a56-4e2c2b2b65ad.json  30ae8723-b968-4e44-869b-0b8fad90c5d6.json  3fbbaba7-1f63-42db-86ee-a3b9f7d5dd5a.json  43755530-3609-46f8-ad5d-6eb2020626f6.json  46d11920-34c3-447d-b688-2ee831d60940.json  4d3e704d-1b12-476e-aa07-b5489e2ce19b.json  5075cbcc-a78f-4835-a001-c2248af2f24c.json  54c9f1e5-a101-402d-bead-09d12bc82e03.json  54fd5215-f4de-4088-a9fe-f8f69019452a.json  599976a2-0b67-46ec-af5d-06d518f86fcf.json  5c1d8285-399f-4cc7-a7fd-8aa390219a57.json  60b65e5a-5314-48b8-979b-b6ca7915318e.json  634f7f16-9fa3-474f-b909-46b47d11d8f3.json  64821b14-3a4f-4613-8a80-80a616d0a1c6.json  64d0f7d0-93dd-4149-ae6b-f3f9b12d56fe.json  6737a8cf-a1d1-454d-bb7b-8f58eef0ff28.json  702cc49c-5801-4de6-905e-00c6127e78d6.json  755b0287-3fba-4a64-a902-344708b9eba6.json  7b91108b-4b41-4aa5-9e45-d7bd007043b7.json  7f906336-e6d8-473a-a179-5ee31f9b8848.json  822dbc80-b246-470a-b5e2-87af6b59a145.json  824e5a58-5e29-4115-bba3-d1f0de53fc35.json  8b9d5e6e-41e1-4e31-8203-205bae6788f1.json  8c046c8f-8291-45d1-96da-20325432dfa2.json  8e719d08-2cce-45e4-8c15-a67a2920967b.json  9cac02db-e156-4b5b-8ca8-f097c0a22bc7.json  ab42076b-352a-45a6-b148-ff85acf153f8.json  ae9e47d7-0462-4e46-9357-cd2520c2b307.json  b199e5b6-054d-4257-ab5b-9a99cfa9b391.json  b3525c9e-cf64-4468-95c7-9bd1cd973f9d.json  (+25 more)
.omc/state/: agent-replay-098dfc38-3966-4b8b-b775-52f0ae7da194.jsonl  agent-replay-2091f241-d2ef-4f71-9143-3e7555ae47fd.jsonl  agent-replay-3fbbaba7-1f63-42db-86ee-a3b9f7d5dd5a.jsonl  agent-replay-4c47016d-13c5-4fd9-83a7-9ed3acd4518e.jsonl  agent-replay-64821b14-3a4f-4613-8a80-80a616d0a1c6.jsonl  agent-replay-6737a8cf-a1d1-454d-bb7b-8f58eef0ff28.jsonl  (+7 more)
backend/api-server/: Cargo.toml
backend/api-server/.omc/state/: agent-replay-43755530-3609-46f8-ad5d-6eb2020626f6.jsonl  subagent-tracking.json
backend/api-server/src/: errors.rs  main.rs  retry.rs  state.rs
backend/api-server/src/.omc/state/: agent-replay-6737a8cf-a1d1-454d-bb7b-8f58eef0ff28.jsonl  mission-state.json  subagent-tracking.json
backend/api-server/src/middleware/: audit.rs  auth.rs  metrics.rs  mod.rs  rate_limit.rs  request_id.rs  security_headers.rs  validation.rs  version_gate.rs
backend/api-server/src/routes/: account.rs  ai.rs  auth.rs  balance.rs  config.rs  mod.rs  mpc.rs  mpc_ws.rs  policy.rs  price.rs  push.rs  shards.rs  swap.rs  tx.rs  tx_history.rs  userop.rs  wallets.rs  yield_.rs
backend/api-server/src/routes/ai/: action.rs  chat.rs  intent.rs  mod.rs  sessions.rs  tools.rs
backend/api-server/src/services/: ai_executor.rs  ai_provider.rs  bedrock_provider.rs  bridgers.rs  chat_store.rs  claude.rs  covalent.rs  crypto.rs  defillama.rs  email.rs  mod.rs  okx.rs  presign_manager.rs  rpc_provider.rs  turnstile.rs  tx_tracker.rs
backend/api-server/src/services/ai_executor/: balance.rs  chains.rs  history.rs  mod.rs  policy.rs  security.rs  swap.rs  transaction.rs  yield_tools.rs
backend/api-server/src/services/mpc_participant/: mod.rs  shard_store.rs  types.rs
docs/: CoWallet-FENZ-2026-0142-SOLUTION-ZH.html  FENZ-2026-0142-SOLUTION-ZH.html  FENZ-2026-0142-SOLUTION-ZH.md  FORCE_UPGRADE_RUNBOOK.md  LINEAR_PROJECT_PLAN.md  RELEASE-NOTES-MPC-SECURITY-FIX.md  SECURITY-FIX-REPORT-R2-ZH.md  STEP-B-PIN-SHARD-HANDOFF.md  TESTING_SUMMARY.md  cosign.md
mobile/: .gitignore  CRITICAL_SERVICES.md  E2E_TESTING.md  FAST_START_COMPLETE.md  FAST_START_OPTIMIZATION.md  NATIVE_SPLASH.md  NATIVE_SPLASH_FINAL.md  TESTING.md  build-android-prod.sh  dart_define.json  flutter_native_splash.yaml  pubspec.yaml  run.sh
scripts/: generate_bindings.sh  rebuild_ffi.sh
website/: package-lock.json  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo
(+461 files in other folders)
