[workspace]
resolver = "2"
members = [
    "crates/mpc-core",
    "crates/chain-evm",
    "crates/policy-engine",
    "crates/ai-bridge",
    "crates/storage-crypto",
    "backend/api-server",
    "backend/mpc-relay",
    "backend/worker",
    "crates/ffi-mobile",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/user/cowallet"

[workspace.dependencies]
# Crypto primitives
k256 = { version = "0.13", features = ["ecdsa", "arithmetic"] }
elliptic-curve = "0.13"
ecdsa = "0.16"
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
rand_core = "0.6"
sha2 = "0.10"
sha3 = "0.10"
hkdf = "0.12"
synedrion = { version = "0.3", features = ["k256"] }
zeroize = { version = "1", features = ["derive"] }
libc = "0.2"

# EVM / alloy
alloy-primitives = { version = "1", features = ["serde"] }
alloy-signer = "1"
alloy-provider = "1"
alloy-consensus = "1"
alloy-contract = "1"
alloy-network = "1"
alloy-rpc-types = "1"
alloy-sol-types = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Backend
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "compression-full", "timeout", "limit", "metrics"] }
metrics = "0.23"
metrics-exporter-prometheus = "0.15"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }
redis = { version = "0.27", features = ["tokio-comp"] }

# Transport
snow = "0.9"
async-nats = "0.38"

# Errors & logging
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"

# Auth
jsonwebtoken = "9"

# Types
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
hex = "0.4"

# Big integer / Paillier
num-bigint = { version = "0.4", features = ["rand", "serde"] }
num-integer = "0.1"
num-traits = "0.2"
glass_pumpkin = "1"

# AWS
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-sesv2 = "1"

# Testing
proptest = "1"
criterion = "0.5"

# ── 编译 profile ────────────────────────────────────────────────────────────
# 加密依赖(num-bigint 大整数模幂 + glass_pumpkin 安全素数生成)在 opt-level=0
# 下慢几十倍 —— Paillier keygen 会拖到数分钟。这里只把「依赖包」优化编译,自己
# 的 crate 仍随 dev/test 的 opt0 走,增量编译速度不受影响。
# test profile 继承 dev,故 cargo test / nextest 同样受益。
[profile.dev.package."*"]
opt-level = 3

# mpc-core 自身的 Paillier encrypt/decrypt 模幂也是热点,单独优化本 crate。
# 仅影响编译产物的运行速度,不改任何测试语义。
[profile.dev.package.mpc-core]
opt-level = 3
