[package]
name = "api-server"
description = "Axum HTTP API — auth, MPC coordination, transactions, policy, AI proxy"
version.workspace = true
edition.workspace = true

[dependencies]
mpc-core = { path = "../../crates/mpc-core" }
chain-evm = { path = "../../crates/chain-evm" }
policy-engine = { path = "../../crates/policy-engine" }
ai-bridge = { path = "../../crates/ai-bridge" }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
sqlx = { workspace = true }
redis = { workspace = true, features = ["tokio-comp", "aio"] }
async-nats = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
jsonwebtoken = { workspace = true }
reqwest = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
hmac = "0.12"
hkdf = { workspace = true }
alloy-primitives = { workspace = true }
base64 = { workspace = true }
async-stream = "0.3"
dotenvy = "0.15"
bytes = "1"
futures = "0.3"
rand = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
async-trait = "0.1"
aes-gcm = "0.10"
zeroize = { version = "1", features = ["derive", "alloc"] }
bincode = "1.3"
dashmap = "6"
tokio-tungstenite = "0.24"
k256 = { version = "0.13", features = ["arithmetic", "ecdsa", "ecdh"] }
p256 = { version = "0.13", features = ["ecdsa"] }
rsa = { version = "0.9", features = ["sha2"] }
sha3 = "0.10"
aws-config = { workspace = true }
aws-sdk-sesv2 = { workspace = true }

[features]
# Opt-in DB-backed integration tests (require a live Postgres + DATABASE_URL).
# Off by default so `cargo test` stays green offline / in CI without a DB.
integration-tests = []

[dev-dependencies]
# `sqlx::test` (macros) + migration runner, needed only by integration tests.
# The prod `sqlx` (workspace) intentionally omits these features.
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "macros", "migrate"] }
